fix collapse

--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
-@media screen and (max-width: 600px) {
+
+
+@media only screen and (max-width: 768px) {
     p{
         font-size: 10px;
     }
     #time {
       flex-direction: column;
       margin-bottom: 20px;
-
       ;
     }
     #time p{
         padding: 0px;
         margin: 0px;
+        font-size: 10px;
+    }
+    #vehicle{
+        margin: 0px;
+        padding: 0px;
     }
     #activity-location{
         flex-direction: column;
         padding: 0px;
         margin: 0px;
-        margin-bottom: 20px;
     }
     #activity-location p{
         padding: 0px;
         margin: 0px;
+        font-size: 10px;
     }
 
     #note{
         margin: 10px 0px 0px 20px;
     }
+    
   }
